add contact page, move indexs to proper page directories

--- a/src/pages/store/index.astro
+++ b/src/pages/store/index.astro
@@ -3,13 +3,17 @@ import "@/styles/global.css";
 import BaseLayout from "@/layout/Base.astro";
 ---
 
-<BaseLayout page="News">
+<BaseLayout page="Store">
     <a href="/" class="href-back">Back to home</a>
     <p class="mt-3 text-primary text-xs">BEWARE, NOT A 404</p>
     <div class="flex flex-col text-2xs text-left">
         <p>
             this page(s) is just under construction, check back later or
             something. or look around the site, i don't care what you do!
+        </p>
+        <p>
+            i have no idea when this will be done or if it will be made at all.
+            For now... you're just gonna have to wait and see!
         </p>
     </div>
 </BaseLayout>
