--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,8 +4,9 @@ import BaseLayout from "@/layout/Base.astro";
 ---
 
 <BaseLayout>
-    <div class="flex flex-col items-center">
-        <span class="text-primary text-xs">404</span>
-        <span class="text-2xs">the page you're looking for doesn't exist</span>
+    <a href="/" class="href-back">Back to home</a>
+    <p class="mt-3 text-primary text-xs">404</p>
+    <div class="flex flex-col text-2xs text-left">
+        <p>the page you're looking for doesn't exist</p>
     </div>
 </BaseLayout>
