--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -4,9 +4,11 @@ import BaseLayout from "@/layout/Base.astro";
 ---
 
 <BaseLayout page="About">
+    <a href="/" class="href-back">Back to home</a>
+    <p class="mt-3 text-primary text-xs">About</p>
     <div class="flex flex-col text-2xs text-left">
         <p>
-            This band is about <span class="text-primary">HOPE</span> and <span
+            Striving for <span class="text-primary">HOPE</span> and <span
                 class="text-primary">COMPASSION</span
             >.
         </p>
