add first news article

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,15 +18,9 @@ import Grab from "../images/band_pictures/10-18-2025/01.jpeg";
             />
             <span class="mb-3 text-xs text-primary font-bold">Updates</span>
             <span class="flex flex-col gap-y-2">
-                <span class="text-2xs text-foreground/60 underline"
-                    >updates section under construction...</span
-                >
-                <!-- <span class="text-2xs text-foreground/60 underline" -->
-                <!--     >2026 incoming.. New site design!</span -->
-                <!-- > -->
-                <!-- <span class="text-2xs text-foreground/60 underline" -->
-                <!--     >New site layout, design and first run of shirts sould out!</span -->
-                <!-- > -->
+                <a href="/news" class="href-back">
+                    New website, end of year show thoughts and shirts! 
+                </a>
             </span>
         </div>
         <div class="flex flex-col items-end space-y-1 w-1/3">
