aid mobile view

--- a/src/layout/Base.astro
+++ b/src/layout/Base.astro
@@ -35,9 +35,9 @@ const navClass = (href) =>
         <title>{fullTitle}</title>
         <ClientRouter />
     </head>
-    <body class="h-screen">
+    <body class="h-screen w-[650px] mx-auto px-12">
         <main class="pt-30 flex flex-col justify-center items-center">
-            <div class="w-[650px] space-y-1">
+            <div class="space-y-1">
                 <div class="w-full space-y-1 mb-3">
                     <Image
                         width={650}
