--- a/src/pages/memories/index.astro
+++ b/src/pages/memories/index.astro
@@ -7,6 +7,9 @@ import BaseLayout from "@/layout/Base.astro";
     <a href="/" class="href-back">Back to home</a>
     <p class="mt-3 text-primary text-xs">Memories!</p>
     <div class="flex flex-col text-2xs text-left">
+        <a class="href-song-lyrics" href="/memories/12-27-2025"
+            >December 27th, 2025</a
+        >
         <a class="href-song-lyrics" href="/memories/11-29-2025"
             >November 29th, 2025</a
         >
