refactor news sections

--- a/src/layout/Base.astro
+++ b/src/layout/Base.astro
@@ -67,10 +67,10 @@ const navClass = (href) =>
                         <span
                             class="absolute right-[143px] rotate-20 w-1 h-15 bg-foreground/10"
                         ></span>
-                        <!-- <span -->
-                        <!--     id="clock" -->
-                        <!--     class="absolute font-medium right-2 text-2xs" -->
-                        <!-- ></span> -->
+                        <span
+                            id="clock"
+                            class="absolute font-medium right-2 text-2xs"
+                        ></span>
                         <span
                             class="absolute right-0.5 rotate-20 w-[134px] h-24 bg-foreground/10"
                         ></span>
