--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,17 +19,22 @@ import Grab from "../images/band_pictures/10-18-2025/01.jpeg";
             <span class="mb-3 text-xs text-primary font-bold">Updates</span>
             <span class="flex flex-col gap-y-2">
                 <a href="/news" class="href-back">
-                    New website, end of year show thoughts and shirts!
+                    12/30/25: New website, end of year show thoughts and shirts!
                 </a>
             </span>
         </div>
-        <div class="flex flex-col items-end space-y-1 w-1/3">
+        <div class="flex flex-col items-end space-y-1 w-2/5">
             <Image
                 height={150}
                 src={Grab}
                 layout="full-width"
                 alt="first show mic grab"
             />
+            <p class="items-center text-2xs text-foreground/60">
+                powered by an unwavering need for understanding // <span
+                    class="text-primary">&copy;lifechord 2026</span
+                >
+            </p>
         </div>
     </div>
 </BaseLayout>
