--- a/src/layout/Base.astro
+++ b/src/layout/Base.astro
@@ -33,6 +33,25 @@ const navClass = (href) =>
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>{fullTitle}</title>
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon/favicon-16x16.png"
+        />
+        <!-- IOS / android favicon -->
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/favicon/apple-touch-icon.png"
+        />
+        <link rel="manifest" href="/favicon/site.webmanifest" />
         <ClientRouter />
     </head>
     <body class="h-screen w-[650px] mx-auto px-12">
