--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,18 +23,21 @@ import Grab from "../images/band_pictures/10-18-2025/01.jpeg";
                 </a>
             </span>
         </div>
-        <div class="flex flex-col items-end space-y-1 w-2/5">
+        <div class="flex flex-col items-end space-y-1">
             <Image
                 height={150}
                 src={Grab}
                 layout="full-width"
                 alt="first show mic grab"
             />
-            <p class="items-center text-2xs text-foreground/60">
-                powered by an unwavering need for understanding // <span
-                    class="text-primary">&copy;lifechord 2026</span
+            <p class="text-right items-center text-2xs text-foreground/60">
+                powered by unity // <span class="text-primary"
+                    >&copy;lifechord 2026</span
                 >
             </p>
+            <a href="/contact" class="mt-3 href-back">
+                Send us a quick message!
+            </a>
         </div>
     </div>
 </BaseLayout>
