add jan 12, 2026 news article

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,9 @@ import Grab from "../images/band_pictures/10-18-2025/01.jpeg";
             <span class="mb-3 text-xs text-primary font-bold">Updates</span>
             <span class="flex flex-col gap-y-2">
                 <a href="/news" class="href-back">
+                    1/12/26: FYA 12, and why Hardcore is special!
+                </a>
+                <a href="/news" class="href-back">
                     12/30/25: New website, end of year show thoughts and shirts!
                 </a>
             </span>
