--- a/src/news-articles/12-30-2025/article.astro
+++ b/src/news-articles/12-30-2025/article.astro
@@ -10,7 +10,7 @@ import firstShirtSheet from "@/news-articles/12-30-2025/sheet.jpeg";
 <p class="mt-3 text-primary text-xs">
     December 30th, 2025 - "Why is everything blue?"
 </p>
-<div class="flex flex-col gap-y-2 text-2xs text-left">
+<div class="w-3/5 flex flex-col gap-y-2 text-2xs text-left">
     <p>
         Yeah... long story short, I got bored. For a couple weeks now i've been
         looking at the old version of the site and thought it was kinda plain, a
