cred merlin for buying me the book

--- a/src/news-articles/1-12-2026/article.astro
+++ b/src/news-articles/1-12-2026/article.astro
@@ -98,22 +98,21 @@ import lc from "@/news-articles/1-12-2026/lc.jpg";
         anything yet as nothing at the merch tables or the warehouse next door
         with label merch really piqued my interest. Or at least that was the
         case until I saw the "Have Heart 2024 Photobook" at the Disorder table.
-        I bought it instantly, having wanted it for a while but never getting
-        around to actually buying it. I went to the car to look at it and read
-        the foreword and afterword. And there I was, fighting back tears as I'm
-        reading what felt like someone's attempt at telling a loved one "I miss
-        you, here's what I accomplished since you've been gone." It's
-        bittersweet really: doing and expierencing all these cool things,
-        connecting with people in a way that words can't truly describe. Reading
-        this at a place like FYA felt warm. Sometimes it's hard to look at where
-        you are and appreciate the moment for what it is, knowing that it won't
-        last forever. All the anger, frustration, and dissent we carry against
-        the world somehow turns into compassion and connection in a place like
-        this. A place where people who don't really fit can relate with one
-        another. A place that many people have learned to call home. <span
-            class="text-primary"
-            >Hardcore is special.
-        </span>
+        Merlin really wanted to get me something, so the moment I saw it she
+        bought it for me instantly, which means alot because I've wanted it for
+        a while but never got around to actually buying it. I went to the car to
+        look at it and read the foreword and afterword. And there I was,
+        fighting back tears as I'm reading what felt like someone's attempt at
+        telling a loved one "I miss you, here's what I accomplished since you've
+        been gone." It's bittersweet really: doing and expierencing all these
+        cool things, connecting with people in a way that words can't truly
+        describe. Reading this at a place like FYA felt warm. Sometimes it's
+        hard to look at where you are and appreciate the moment for what it is,
+        knowing that it won't last forever. All the anger, frustration, and
+        dissent we carry against the world somehow turns into compassion and
+        connection in a place like this. A place where people who don't really
+        fit can relate with one another. A place that many people have learned
+        to call home. <span class="text-primary">Hardcore is special. </span>
         And I agree with the sentiment that sometimes it really is just music. But
         hardcore can be special... to someone who needs it. It's a thing that many
         people in their life never get to experience. When the melodies you wrote,
