--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Grab from "../images/band_pictures/10-18-2025/01.jpeg";
     <div class="flex justify-between">
         <div class="flex flex-col items-start w-1/3">
             <Image
+                id="home-logo"
                 class="mb-3"
                 width={200}
                 src={Logo}
