--- a/src/components/ThemeSelector.astro
+++ b/src/components/ThemeSelector.astro
@@ -12,8 +12,8 @@
         role="listbox"
     >
         <li class="nav-item py-0.5" data-theme="blue">BLUE</li>
+        <li class="nav-item py-0.5" data-theme="green">GREEN</li>
         <li class="nav-item py-0.5" data-theme="grey">GREY</li>
-        <!-- <li class="nav-item py-0.5" data-theme="sakura">SAKURA</li> -->
         <li class="nav-item py-0.5" data-theme="mcd">
             MCDONALDS (I LOVE THAT SHIT)
         </li>
